rbd-mirror: improve detection of blacklisted state

Fixes: https://tracker.ceph.com/issues/44159
Signed-off-by: Mykola Golub <mgolub@suse.com>